Add animation and favicon

--- a/server/add.html
+++ b/server/add.html
@@ -13,6 +13,7 @@
     .message { margin-top: 20px; color: #27ae60; }
     .back-link { display: inline-block; margin-bottom: 20px; color: #3498db; text-decoration: underline; }
   </style>
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
 </head>
 <body>
   <h1>Додати страву</h1>
