--- a/server/feedback.html
+++ b/server/feedback.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Зворотній зв'язок | Food Planner</title>
-<link rel="stylesheet" href="/static/style.css"></head>
+<link rel="stylesheet" href="/static/style.css">
+<link rel="icon" type="image/svg+xml" href="/favicon.svg">
+</head>
 <body>
   <div class="container">
     <div class="tabs">
