--- a/server/feedback.html
+++ b/server/feedback.html
@@ -37,6 +37,10 @@
       <h3>Контактна інформація</h3>
       <p>Email: foodplanner@example.com</p>
       <p>Телефон: +38 (099) 123-45-67</p>
+      <p>
+        <a href="https://instagram.com/yurcheke" target="_blank" style="color:#e1306c;font-weight:bold;text-decoration:none;">Instagram</a> |
+        <a href="https://github.com/yStasiv/foodRandomizer" target="_blank" style="color:#333;font-weight:bold;text-decoration:none;">GitHub</a>
+      </p>
     </div>
   </div>
   <script>
